--- a/frontend/src/main/resources/html/user/group_overview.html
+++ b/frontend/src/main/resources/html/user/group_overview.html
@@ -150,16 +150,6 @@
                 transform: translateX(0);
                 /* 画面幅の30%にメニューを表示 */
             }
-            .remove-btn {
-                background-color: #FFCCC0; /* ボタンの背景色 */
-                border-bottom: 4px solid #FFA07A; /* 下線の色 */
-                box-shadow: 0.1em 0.1em 3px rgba(0, 0, 0, 0.5); /* 影の設定 */
-                width: 400px; 
-                height: 100px;
-                border: none;
-                border-radius: 30px;
-                font-size: 40px;
-            }
         </style>
     </head>
     <body class="bg-orange-100">
@@ -188,66 +178,15 @@
             </div>
         </header>
         <main class="bg-orange-100">
-            <h1 class="text-orange-500 text-8xl text-center m-12">グループ管理</h1>
-            <!-- ボタン -->
-            <div class="flex justify-end mt-20 mr-10">
-                <button class="remove-btn text-center">グループから抜ける</button>
-            </div>
-            <!-- メンバー一覧 -->
-            <h2 class="text-7xl border-4 bg-orange-200 mt-20 ml-10 w-2/5">メンバー一覧</h2>
-            <div id="members-container" class="h-2/5 pt-20">
-                <!-- メンバーの表示　-->
-            </div>
-            <!-- 管理者一覧 -->
-            <h2 class="text-7xl border-4 bg-orange-200 ml-10 w-2/5">管理者一覧</h2>
-            <div id="observer-container" class="h-2/6 pt-20">
-                <!-- 管理者の表示 -->
-            </div>
+
         </main>
         <script>
+            // ハンバーガーメニューのjs
             $(function () {
                 $('.js-btn').on('click', function () { // js-btnクラスをクリックすると、
                     $('.menu').toggleClass('open'); // メニューにopenクラスをつけ外しする
                     $('.btn-line').toggleClass('open'); // バーガーの線にopenクラスをつけ外しする
                 });
-            });
-            
-            // サンプルデータ
-            const members = [
-                { name: 'Aさん', role: 'メンバー' },
-                { name: 'Bさん', role: '管理者' },
-                { name: 'Cさん', role: 'メンバー' },
-                { name: 'Dさん', role: '管理者' },
-                { name: 'Eさん', role: 'メンバー' }
-            ];
-
-            const membersContainer = document.getElementById('members-container');
-
-            members.forEach(member => {
-                const membersDiv = document.createElement('div');
-                membersDiv.className = 'flex items-center mb-10 ml-52 relative';
-
-                const name = document.createElement('p');
-                name.textContent = member.name;
-                name.className = 'text-6xl';
-
-                membersDiv.appendChild(name);
-                membersContainer.appendChild(membersDiv);
-            });
-            const observerContainer = document.getElementById('observer-container');
-
-            members.forEach(member => {
-                const observerDiv = document.createElement('div');
-                observerDiv.className = 'flex items-center mb-10 ml-52 relative';
-
-                if(member.role === '管理者') {
-                const name = document.createElement('p');
-                name.textContent = member.name;
-                name.className = 'text-6xl';
-
-                observerDiv.appendChild(name);
-                observerContainer.appendChild(observerDiv);
-                }
             });
         </script>
     </body>
