サンプルデータの修正

--- a/frontend/src/main/resources/html/user/group_overview.html
+++ b/frontend/src/main/resources/html/user/group_overview.html
@@ -207,12 +207,12 @@
                     name: 'A Group',
                     admins: [
                         { id: 1, name: 'お母さん', icon: '/frontend/images/mother_image.png', password: 'password1' },
-                        { id: 4, name: 'おとうと', icon: '/frontend/images/youngerBrother_image.png', password: 'password4' }
+                        { id: 2, name: 'お父さん', icon: '/frontend/images/father_image.png', password: 'password2' }
                     ],
                     members: [
-                        { id: 2, name: 'お父さん', icon: '/frontend/images/father_image.png', password: 'password2' },
                         { id: 3, name: 'お兄さん', icon: '/frontend/images/olderBrother_image.png', password: 'password3' },
                         { id: 4, name: 'おとうと', icon: '/frontend/images/youngerBrother_image.png', password: 'password4' },
+                        { id: 5, name: 'いもうと', icon: '/frontend/images/youngerSister_image.png', password: 'password5' }
                     ]
                     
                 }
