--- a/frontend/src/main/resources/html/setting_user/login_group.html
+++ b/frontend/src/main/resources/html/setting_user/login_group.html
@@ -27,8 +27,8 @@
 
 <body class="bg-orange-100  m-0 p-0 ">
     <!-- title -->
-    <header class="pr-24 pl-24 pt-52">
-        <h1 class="text-8xl text-center mt-24 text-orange-600 font-bold">分担ちゃん</h1>
+    <header>
+        <img class="ml-auto mr-auto bottom-0" src="/frontend/images/rogo.png" alt="ロゴ">
     </header>
     <!-- main -->
     <main class="p-10 ">
