--- a/frontend/src/main/resources/html/setting_user/login_group.html
+++ b/frontend/src/main/resources/html/setting_user/login_group.html
@@ -12,11 +12,11 @@
         }
 
         header {
-            height: 20%;
+            height: 30%;
         }
 
         main {
-            height: 50%;
+            height: 40%;
         }
 
         footer {
@@ -28,7 +28,7 @@
 <body class="bg-orange-100  m-0 p-0 ">
     <!-- title -->
     <header>
-        <img class="ml-auto mr-auto bottom-0" src="/frontend/images/rogo.png" alt="ロゴ">
+        <img class="ml-auto mr-auto bottom-0 w-full h-auto" src="/frontend/images/rogo.png" alt="ロゴ">
     </header>
     <!-- main -->
     <main class="p-10 ">
