--- a/frontend/src/main/resources/html/admin/admin_task_list.html
+++ b/frontend/src/main/resources/html/admin/admin_task_list.html
@@ -2,10 +2,12 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>ポイント管理</title>
-        <link rel="stylesheet" href="/frontend/src/main/resources/static/user/point_mgmt.css">
+        <title>管理者タスクリスト</title>
+        <link rel="stylesheet" href="/frontend/src/main/resources/static/admin/admin_task_list.css">
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <!-- Google fonts Icon -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"/>
         <style>
             body {
                 height: 100vh;
@@ -150,6 +152,42 @@
                 transform: translateX(0);
                 /* 画面幅の30%にメニューを表示 */
             }
+            /* タイトル文字の間隔 */
+            h1 {
+                letter-spacing: .2em;
+            }
+            #add_circle{
+                font-size: 60px;
+                color: white;
+                background-color: black;
+                border-radius: 50%;
+                padding: 1px;
+            }
+            /* 新規作成ボタンのスタイル */
+            #new_createBtn{
+                background-color: white;
+                /* border: 4px solid;
+                border-color: black; */
+                border-radius: 100vh;
+                width: 200px;
+            }
+            #task_container{
+                height: 1580px;
+                border-color: rgb(255,231,204);
+                background-color: rgb(255,231,204);
+            }
+            /* タスクの完了・未完了チェックマークのスタイル */
+            #check_circle {
+            font-size: 80px;
+            border-radius: 50%;
+            padding: 5px;
+            }
+            #check_circle.completed {
+                color: rgb(255 237 213);
+            }
+            #check_circle.incomplete {
+                color: #a0a2a5;
+            }
         </style>
         </head>
         <body class="bg-orange-100">
@@ -179,7 +217,18 @@
             </header>
             <!-- main要素 -->
             <main>
-
+                <!-- タイトルとタスクの新規作成ボタン -->
+                <div class="flex justify-between mt-10">
+                    <h1 class="text-orange-400 text-7xl ml-9">タスクリスト</h1>
+                    <button id="new_createBtn" class="flex justify-between mr-10">
+                        <span id="add_circle" class="material-icons ml-4">add_circle</span>
+                        <p class="text-3xl mr-10">新規</p>
+                    </button>
+                </div>
+                <!-- タスクリストコンテナ -->
+                <div id="task_container" class="border-4 rounded-t-lg w-11/12 mx-auto mt-10 pt-12 px-20 overflow-scroll">
+                    <!-- タスクが表示される -->
+                </div>
             </main>
             <script>
                 // ハンバーガーメニューのjsd
@@ -188,6 +237,41 @@
                         $('.menu').toggleClass('open'); // メニューにopenクラスをつけ外しする
                         $('.btn-line').toggleClass('open'); // バーガーの線にopenクラスをつけ外しする
                     });
+                });
+
+                // サンプルデータ
+                const tasks = [
+                    { name: 'ゴミ', completed: true },
+                    { name: 'かいもの', completed: false },
+                    { name: 'せんたく', completed: true },
+                    { name: 'そうじ', completed: false },
+                    { name: 'さらあらい', completed: true },
+                    { name: 'りょうり', completed: false }
+                ];
+
+                // タスクリストの表示
+                const task_list = document.getElementById('task_container');
+                tasks.forEach(task => {
+                    // タスクのコンテナを作成
+                    const task_item = document.createElement('div');
+                    task_item.className = 'flex items-center w-auto h-36 bg-orange-50 border-4 border-orange-50 rounded-3xl mt-10 mb-16 relative';
+
+                    // タスクのチェックボタンを表示
+                    const checkSpan = document.createElement('span')
+                    checkSpan.id = 'check_circle';
+                    checkSpan.className = 'material-icons absolute left-4';
+                    checkSpan.textContent ='check_circle';
+                    checkSpan.classList.add(task.completed ? 'completed' : 'incomplete');
+
+                    // タスクの名前を表示
+                    const taskText = document.createElement('p');
+                    taskText.textContent = task.name;
+                    taskText.className = 'text-6xl text-center flex-grow mx-auto';
+
+                    // タスクのコンテナに追加
+                    task_item.appendChild(checkSpan);
+                    task_item.appendChild(taskText);
+                    task_list.appendChild(task_item);
                 });
             </script>
         </body>
