いらない部分の削除

--- a/frontend/src/html/setting_user/login_group.html
+++ b/frontend/src/html/setting_user/login_group.html
@@ -35,14 +35,11 @@
         <p class="text-6xl mt-48 text-center">グループを作成しますか？</p>
         <p class="text-3xl mt-7 text-center">または既にあるグループに参加しますか？</p>
         <div class="grid justify-center">
-            <button class="mt-16 text-6xl bg-orange-300 font-light w-fit pt-10 pb-10 pr-28 pl-28">グループ作成</button>
+            <button class="mt-16 text-6xl  font-light w-fit pt-10 pb-10 pr-28 pl-28">グループ作成</button>
             <p class="text-3xl mt-7 text-center text-gray-400">----------or----------</p>
-            <button class="mt-16 text-6xl bg-green-400 font-light w-fit pt-10 pb-10 pr-28 pl-28">グループ参加</button>
+            <button class="mt-16 text-6xl  font-light w-fit pt-10 pb-10 pr-28 pl-28">グループ参加</button>
         </div>
     </main>
-    <footer class="p-1">
-        <img class="w-full h-auto " src="/frontend/images/Fuzzy Friends Plein Air Painting Trip.png" alt="下の画像">
-    </footer>
 </body>
 
 </html>
