headerとmainの配置を修正

--- a/frontend/src/html/setting_user/login_group.html
+++ b/frontend/src/html/setting_user/login_group.html
@@ -12,15 +12,12 @@
         }
 
         header {
-            height: 30%;
+            height: 50%;
+            margin-top: 30px;
         }
 
         main {
-            height: 40%;
-        }
-
-        footer {
-            height: 30%;
+            height: 50%;
         }
     </style>
 </head>
@@ -28,16 +25,16 @@
 <body class="bg-orange-100  m-0 p-0 ">
     <!-- title -->
     <header>
-        <img class="ml-auto mr-auto bottom-0 w-full h-auto" src="/frontend/images/rogo.png" alt="ロゴ">
+        <img class="ml-auto mr-auto  w-full h-auto" src="/frontend/images/rogo.png" alt="ロゴ">
     </header>
     <!-- main -->
     <main class="p-10 ">
-        <p class="text-6xl mt-48 text-center">グループを作成しますか？</p>
+        <p class="text-6xl  text-center">グループを作成しますか？</p>
         <p class="text-3xl mt-7 text-center">または既にあるグループに参加しますか？</p>
         <div class="grid justify-center">
-            <button class="mt-16 text-6xl  font-light w-fit pt-10 pb-10 pr-28 pl-28">グループ作成</button>
+            <button class="mt-16 text-6xl  font-light w-fit pt-5 pb-5 pr-28 pl-28">グループ作成</button>
             <p class="text-3xl mt-7 text-center text-gray-400">----------or----------</p>
-            <button class="mt-16 text-6xl  font-light w-fit pt-10 pb-10 pr-28 pl-28">グループ参加</button>
+            <button class="mt-16 text-6xl  font-light w-fit pt-5 pb-5 pr-28 pl-28">グループ参加</button>
         </div>
     </main>
 </body>
