--- a/frontend/src/html/setting_user/login_group.html
+++ b/frontend/src/html/setting_user/login_group.html
@@ -4,37 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <title>ログイン画面</title>
-    <link rel="stylesheet" href="/frontend/src/css/setting_user/login_group.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <style>
         body {
             height: 100vh;
             overflow: hidden;
+            background: rgba(246, 219, 186, 0.5);
         }
-
-        header {
-            height: 50%;
-            margin-top: 30px;
+        .create{
+            background-color: #4AB4A1;
+            border-radius: 30px;
         }
-
-        main {
-            height: 50%;
-        }
+        .join{
+            background-color: #71CDEE;
+            border-radius: 30px;
+        }   
     </style>
 </head>
 
-<body class="bg-orange-100  m-0 p-0 ">
+<body>
     <!-- title -->
-    <header>
-        <img class="ml-auto mr-auto  w-full h-auto" src="/frontend/images/rogo.png" alt="ロゴ">
+    <header class="flex justify-center items-center h-1/2">
+        <img class="w-full h-auto" src="/frontend/images/rogo.png" alt="ロゴ">
     </header>
+
     <!-- main -->
-    <main class="p-10 ">
-        <p class="text-6xl  text-center">グループを作成しますか？</p>
+    <main class="flex flex-col justify-center items-center  w-full">
+        <p class="text-6xl text-center">グループを作成しますか？</p>
         <p class="text-3xl mt-7 text-center">または既にあるグループに参加しますか？</p>
-        <div class="grid justify-center">
-            <button class="mt-16 text-6xl  font-light w-fit pt-5 pb-5 pr-28 pl-28">グループ作成</button>
-            <p class="text-3xl mt-7 text-center text-gray-400">----------or----------</p>
-            <button class="mt-16 text-6xl  font-light w-fit pt-5 pb-5 pr-28 pl-28">グループ参加</button>
+
+        <!-- 選択肢 -->
+        <div class="flex flex-col items-center w-full">
+            <button class="mt-16 text-6xl font-light w-4/5 py-5 create">グループ作成</button>
+            <p class="text-6xl mt-7 text-center text-gray-400">----------------or----------------</p>
+            <button class="mt-16 text-6xl font-light w-4/5 py-5 join">グループ参加</button>
         </div>
     </main>
 </body>
