色とフォントの変更

--- a/frontend/src/html/setting_user/login_group.html
+++ b/frontend/src/html/setting_user/login_group.html
@@ -5,20 +5,28 @@
     <meta charset="UTF-8">
     <title>ログイン画面</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Yusei+Magic&display=swap" rel="stylesheet">
     <style>
         body {
             height: 100vh;
             overflow: hidden;
             background: rgba(246, 219, 186, 0.5);
+            font-family: "Kiwi Maru", serif;
         }
-        .create{
+
+        .create {
             background-color: #4AB4A1;
             border-radius: 30px;
+            box-shadow: rgba(0, 0, 0, 0.647) 0px 5px 10px;
         }
-        .join{
+
+        .join {
             background-color: #71CDEE;
             border-radius: 30px;
-        }   
+            box-shadow: rgba(0, 0, 0, 0.647) 0px 5px 10px;
+
+        }
     </style>
 </head>
 
