--- a/frontend/src/html/setting_user/login_group.html
+++ b/frontend/src/html/setting_user/login_group.html
@@ -39,13 +39,13 @@
     <!-- main -->
     <main class="flex flex-col justify-center items-center  w-full">
         <p class="text-6xl text-center">グループを作成しますか？</p>
-        <p class="text-3xl mt-7 text-center">または既にあるグループに参加しますか？</p>
+        <p class="text-4xl mt-7 text-center">または既にあるグループに参加</p>
 
         <!-- 選択肢 -->
         <div class="flex flex-col items-center w-full">
-            <button class="mt-16 text-6xl font-light w-4/5 py-5 create">グループ作成</button>
+            <button  class="mt-16 text-5xl font-light w-4/5 py-5 create">グループ作成</button>
             <p class="text-6xl mt-7 text-center text-gray-400">----------------or----------------</p>
-            <button class="mt-16 text-6xl font-light w-4/5 py-5 join">グループ参加</button>
+            <button class="mt-16 text-5xl font-light w-4/5 py-5 join">グループ参加</button>
         </div>
     </main>
 </body>
