--- a/frontend/src/html/setting_user/login_group.html
+++ b/frontend/src/html/setting_user/login_group.html
@@ -43,7 +43,8 @@
 
         <!-- 選択肢 -->
         <div class="flex flex-col items-center w-full">
-            <button  class="mt-16 text-5xl font-light w-4/5 py-5 create">グループ作成</button>
+            <button onclick="location.href='new_user.html'"
+                class="mt-16 text-5xl font-light w-4/5 py-5 create">グループ作成</button>
             <p class="text-6xl mt-7 text-center text-gray-400">----------------or----------------</p>
             <button class="mt-16 text-5xl font-light w-4/5 py-5 join">グループ参加</button>
         </div>
