--- a/frontend/src/html/setting_user/login_group.html
+++ b/frontend/src/html/setting_user/login_group.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ログイン画面</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <link rel="stylesheet" href="/frontend/src/css/setting_user/login_group.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Yusei+Magic&display=swap" rel="stylesheet">
     <style>
@@ -32,7 +32,7 @@
 
 <body>
     <!-- title -->
-    <header class="flex justify-center items-center h-1/2">
+    <header class="h-1/2">
         <img class="w-full h-auto" src="/frontend/images/rogo.png" alt="ロゴ">
     </header>
 
