--- a/frontend/src/html/setting_user/new_user.html
+++ b/frontend/src/html/setting_user/new_user.html
@@ -10,6 +10,7 @@
             height: 100vh;
             overflow: hidden;
         }
+
         /* ボタン */
         /* ボタンの箱の形 */
         .login-button {
@@ -88,10 +89,10 @@
     </style>
 </head>
 
-<body class="bg-orange-100  m-0 p-0 ">
+<body>
     <!-- title -->
-    <header class="pr-24 pl-24 pt-52">
-        <h1 class="text-8xl text-center mt-24 text-orange-600 font-bold">分担ちゃん</h1>
+    <header class="flex justify-center items-center h-1/2">
+        <img class="w-full h-auto" src="/frontend/images/rogo.png" alt="ロゴ">
     </header>
     <!-- main -->
     <main class="p-10 ">
