戻り値を作成

--- a/frontend/src/html/setting_user/new_user.html
+++ b/frontend/src/html/setting_user/new_user.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <title>新規登録画面</title>
     <link rel="stylesheet" href="/frontend/src/css/setting_user/new_user.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Yusei+Magic&display=swap" rel="stylesheet">
     <style>
         body {
             height: 100vh;
             overflow: hidden;
+            background: rgba(246, 219, 186, 0.5);
+            font-family: "Kiwi Maru", serif;
         }
 
         /* ボタン */
@@ -92,6 +96,8 @@
 <body>
     <!-- title -->
     <header class="flex justify-center items-center h-1/2">
+        <a class="absolute top-5 left-5 " href="./login_group.html"><img class="w-16 h-24" src="/frontend/images/back.png" alt="戻る"></a>
+
         <img class="w-full h-auto" src="/frontend/images/rogo.png" alt="ロゴ">
     </header>
     <!-- main -->
