--- a/frontend/src/html/setting_user/new_user.html
+++ b/frontend/src/html/setting_user/new_user.html
@@ -95,15 +95,41 @@
 
 <body>
     <!-- title -->
-    <header class="flex justify-center items-center h-1/2">
-        <a class="absolute top-5 left-5 " href="./login_group.html"><img class="w-16 h-24" src="/frontend/images/back.png" alt="戻る"></a>
-
+    <header class="h-1/2">
+        <a class="absolute top-5 left-5 " href="./login_group.html"><img class="w-16 h-24"
+                src="/frontend/images/back.png" alt="戻る"></a>
         <img class="w-full h-auto" src="/frontend/images/rogo.png" alt="ロゴ">
     </header>
     <!-- main -->
-    <main class="p-10 ">
-        <p class="text-6xl mt-36 mb-28 text-center">新規登録</p>
+    <main class="flex flex-col justify-center items-center  w-full">
+        <p class="text-6xl text-center">新規登録</p>
         <div class="grid justify-center ">
+            <!-- Lineログインボタン -->
+            <a href="#" class="line-icon social-media">
+                <div class="line">
+                    <button onclick="gotoLink(this)" class="login-button gsi-material-button"
+                        value="https://www.line.com/">
+                        <div class="login-button-state"></div>
+                        <div class="login-button-content-wrapper">
+                            <div class="login-button-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="#3ace01"
+                                    class="bi bi-line" viewBox="0 0 24 24">
+                                    <!-- Lineのアイコン -->
+                                    <g fill-rule="evenodd" clip-rule="evenodd">
+                                        <path
+                                            d="M8 0c4.411 0 8 2.912 8 6.492 0 1.433-.555 2.723-1.715 3.994-1.678 1.932-5.431 4.285-6.285 4.645-.83.35-.734-.197-.696-.413l.003-.018.114-.685c.027-.204.055-.521-.026-.723-.09-.223-.444-.339-.704-.395C2.846 12.39 0 9.701 0 6.492 0 2.912 3.59 0 8 0M5.022 7.686H3.497V4.918a.156.156 0 0 0-.155-.156H2.78a.156.156 0 0 0-.156.156v3.486c0 .041.017.08.044.107v.001l.002.002.002.002a.15.15 0 0 0 .108.043h2.242c.086 0 .155-.07.155-.156v-.56a.156.156 0 0 0-.155-.157m.791-2.924a.156.156 0 0 0-.156.156v3.486c0 .086.07.155.156.155h.562c.086 0 .155-.07.155-.155V4.918a.156.156 0 0 0-.155-.156zm3.863 0a.156.156 0 0 0-.156.156v2.07L7.923 4.832l-.013-.015v-.001l-.01-.01-.003-.003-.011-.009h-.001L7.88 4.79l-.003-.002-.005-.003-.008-.005h-.002l-.003-.002-.01-.004-.004-.002-.01-.003h-.002l-.003-.001-.009-.002h-.006l-.003-.001h-.004l-.002-.001h-.574a.156.156 0 0 0-.156.155v3.486c0 .086.07.155.156.155h.56c.087 0 .157-.07.157-.155v-2.07l1.6 2.16a.2.2 0 0 0 .039.038l.001.001.01.006.004.002.008.004.007.003.005.002.01.003h.003a.2.2 0 0 0 .04.006h.56c.087 0 .157-.07.157-.155V4.918a.156.156 0 0 0-.156-.156zm3.815.717v-.56a.156.156 0 0 0-.155-.157h-2.242a.16.16 0 0 0-.108.044h-.001l-.001.002-.002.003a.16.16 0 0 0-.044.107v3.486c0 .041.017.08.044.107l.002.003.002.002a.16.16 0 0 0 .108.043h2.242c.086 0 .155-.07.155-.156v-.56a.156.156 0 0 0-.155-.157H11.81v-.589h1.525c.086 0 .155-.07.155-.156v-.56a.156.156 0 0 0-.155-.157H11.81v-.589h1.525c.086 0 .155-.07.155-.156Z" />
+                                    </g>
+                                </svg>
+                            </div>
+                            <span class="login-button-contents">Line でログイン</span>
+                        </div>
+                    </button>
+                </div>
+            </a>
+
+            <!-- または -->
+            <p class="text-3xl mt-7 text-center text-gray-400">-------------------または-------------------</p>
+
             <!-- Googleログインボタン -->
             <a href="#" class="google-icon social-media">
                 <div class="google">
@@ -135,38 +161,9 @@
                 </div>
             </a>
 
-            <!-- または -->
-            <p class="text-3xl mt-7 text-center text-gray-400">-------------------または-------------------</p>
-
-            <!-- Lineログインボタン -->
-            <a href="#" class="line-icon social-media">
-                <div class="line">
-                    <button onclick="gotoLink(this)" class="login-button gsi-material-button"
-                        value="https://www.line.com/">
-                        <div class="login-button-state"></div>
-                        <div class="login-button-content-wrapper">
-                            <div class="login-button-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="#3ace01"
-                                    class="bi bi-line" viewBox="0 0 24 24">
-                                    <!-- Lineのアイコン -->
-                                    <g fill-rule="evenodd" clip-rule="evenodd">
-                                        <path
-                                            d="M8 0c4.411 0 8 2.912 8 6.492 0 1.433-.555 2.723-1.715 3.994-1.678 1.932-5.431 4.285-6.285 4.645-.83.35-.734-.197-.696-.413l.003-.018.114-.685c.027-.204.055-.521-.026-.723-.09-.223-.444-.339-.704-.395C2.846 12.39 0 9.701 0 6.492 0 2.912 3.59 0 8 0M5.022 7.686H3.497V4.918a.156.156 0 0 0-.155-.156H2.78a.156.156 0 0 0-.156.156v3.486c0 .041.017.08.044.107v.001l.002.002.002.002a.15.15 0 0 0 .108.043h2.242c.086 0 .155-.07.155-.156v-.56a.156.156 0 0 0-.155-.157m.791-2.924a.156.156 0 0 0-.156.156v3.486c0 .086.07.155.156.155h.562c.086 0 .155-.07.155-.155V4.918a.156.156 0 0 0-.155-.156zm3.863 0a.156.156 0 0 0-.156.156v2.07L7.923 4.832l-.013-.015v-.001l-.01-.01-.003-.003-.011-.009h-.001L7.88 4.79l-.003-.002-.005-.003-.008-.005h-.002l-.003-.002-.01-.004-.004-.002-.01-.003h-.002l-.003-.001-.009-.002h-.006l-.003-.001h-.004l-.002-.001h-.574a.156.156 0 0 0-.156.155v3.486c0 .086.07.155.156.155h.56c.087 0 .157-.07.157-.155v-2.07l1.6 2.16a.2.2 0 0 0 .039.038l.001.001.01.006.004.002.008.004.007.003.005.002.01.003h.003a.2.2 0 0 0 .04.006h.56c.087 0 .157-.07.157-.155V4.918a.156.156 0 0 0-.156-.156zm3.815.717v-.56a.156.156 0 0 0-.155-.157h-2.242a.16.16 0 0 0-.108.044h-.001l-.001.002-.002.003a.16.16 0 0 0-.044.107v3.486c0 .041.017.08.044.107l.002.003.002.002a.16.16 0 0 0 .108.043h2.242c.086 0 .155-.07.155-.156v-.56a.156.156 0 0 0-.155-.157H11.81v-.589h1.525c.086 0 .155-.07.155-.156v-.56a.156.156 0 0 0-.155-.157H11.81v-.589h1.525c.086 0 .155-.07.155-.156Z" />
-                                    </g>
-                                </svg>
-                            </div>
-                            <span class="login-button-contents">Line でログイン</span>
-                        </div>
-                    </button>
-                </div>
-            </a>
-
             <p class="text-3xl mt-9 text-center">「登録」をクリックすると、<br>利用規約とプライバシーポリシーに同意したことになります。</p>
         </div>
     </main>
-    <footer class="p-1">
-        <img class="w-full h-auto " src="/frontend/images/Fuzzy Friends Plein Air Painting Trip.png" alt="下の画像">
-    </footer>
 </body>
 
 </html>
