背景の修正

--- a/frontend/src/html/user/home.html
+++ b/frontend/src/html/user/home.html
@@ -11,6 +11,8 @@
         body {
             height: 100vh;
             overflow: hidden;
+            background: rgba(246, 219, 186, 0.5);
+
         }
 
         button {
@@ -147,7 +149,7 @@
     </style>
 </head>
 
-<body class="bg-orange-100 m-0 p-0 box-border">
+<body class=" m-0 p-0 box-border">
     <!-- header要素 -->
     <header class="h-40 bg-orange-100 flex items-center">
         <!-- ハンバーガーメニュー -->
