サイドメニューを開くとき背景が暗くになる

--- a/frontend/src/html/user/home.html
+++ b/frontend/src/html/user/home.html
@@ -150,33 +150,53 @@
             transform: translateX(0);
             /* 画面幅の30%にメニューを表示 */
         }
+
+        /* グレイレイヤーの仕様 */
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 8;
+            /* メニューの下に */
+            display: none;
+        }
+
+        /* グレイレイヤーを表示する */
+        .overlay.show {
+            display: block;
+        }
     </style>
 </head>
 
-<body class=" m-0 p-0 box-border font-kiwi-maru"">
+<body class=" m-0 p-0 box-border font-kiwi-maru">
+    <div class="overlay"></div>
     <!-- header要素 -->
     <header class=" h-40 bg-orange-100 flex items-center">
-    <!-- ハンバーガーメニュー -->
-    <button type="button" class="btn js-btn">
-        <span class="btn-line"></span>
-    </button>
+        <!-- ハンバーガーメニュー -->
+        <button type="button" class="btn js-btn">
+            <span class="btn-line"></span>
+        </button>
 
-    <!-- メニューオーバーレイ -->
-    <!-- TODO:表示メニューの調整 -->
-    <nav>
-        <ul class="menu bg-orange-200 text-center">
-            <li class="menu-list "><a href="#" class="text-5xl pt-24 pb-2 px-4  block ">ロゴ</a></li>
-            <li class="menu-list"><a href="#" class="text-5xl py-2 px-4  block hover:text-white">ポイント</a></li>
-            <li class="menu-list"><a href="#" class="text-5xl py-2 px-4 block hover:text-white">タスク管理</a></li>
-            <li class="menu-list"><a href="#" class="text-5xl py-2 px-4 block hover:text-white">グループ管理</a></li>
-        </ul>
-    </nav>
+        <!-- メニューオーバーレイ -->
+        <!-- TODO:表示メニューの調整 -->
+        <nav>
+            <ul class="menu bg-orange-200 text-center">
+                <li class="menu-list "><a href="#" class="text-5xl pt-24 pb-2 px-4  block ">ロゴ</a></li>
+                <li class="menu-list"><a href="#" class="text-5xl py-2 px-4  block hover:text-white">ポイント</a></li>
+                <li class="menu-list"><a href="#" class="text-5xl py-2 px-4 block hover:text-white">タスク管理</a></li>
+                <li class="menu-list"><a href="#" class="text-5xl py-2 px-4 block hover:text-white">グループ管理</a></li>
+            </ul>
+        </nav>
 
-    <!-- iconとalarmの画像配置 -->
-    <div class="flex justify-center absolute right-3">
-        <span id="noti icons"><i class="material-icons" style="font-size:87px;color:#707070;">notifications</i></span>
-        <img class="w-24 h-24 bg-white rounded-full" src="/frontend/images/icon.png" alt="icon" />
-    </div>
+        <!-- iconとalarmの画像配置 -->
+        <div class="flex justify-center absolute right-3">
+            <span id="noti icons"><i class="material-icons"
+                    style="font-size:87px;color:#707070;">notifications</i></span>
+            <img class="w-24 h-24 bg-white rounded-full" src="/frontend/images/icon.png" alt="icon" />
+        </div>
     </header>
 
     <!-- main要素 -->
@@ -201,6 +221,7 @@
             $('.js-btn').on('click', function () { // js-btnクラスをクリックすると、
                 $('.menu').toggleClass('open'); // メニューにopenクラスをつけ外しする
                 $('.btn-line').toggleClass('open'); // バーガーの線にopenクラスをつけ外しする
+                $('.overlay').toggleClass('show'); // グレイレイヤーにshowクラスをつけ外しする
             });
         });
     </script>
