可読性を上げる

--- a/frontend/src/html/join/qr_code.html
+++ b/frontend/src/html/join/qr_code.html
@@ -15,9 +15,14 @@
         <!-- QRコードの周りに赤枠を表示するための -->
         <canvas id="rect-canvas" class="absolute top-0 left-0 z-100"></canvas>
     </div>
+
+    <!-- QRコードの内容を表示するメッセージ -->
     <div id="qr-msg"></div>
+
+
     <!-- HTMLにjsQR.jsを読み込みます。 -->
     <script src="../../js/jsQR.js"></script>
+     <!-- QRコードのスキャンと描画を行うJavaScriptファイル -->
     <script src="../../js/qr_code.js"></script>
 </body>
 </html>
