--- a/frontend/src/html/join/qr_code.html
+++ b/frontend/src/html/join/qr_code.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/join/qr_code.css">
-    <title>Document</title>
+    <title>QR Code Scanner</title>
+    <link rel="stylesheet" href="../../css/join/qr_code.css" />
+    <style>
+        body {
+            height: 100vh;
+            overflow: hidden;
+            background: rgba(246, 219, 186, 0.5);
+
+        }
+    </style>
 </head>
+
 <body>
     <div id="wrapper" class="relative">
         <!-- QR読み込みのためのカメラ映像を表示する -->
@@ -13,16 +23,17 @@
         <!-- ＜video＞要素をもとにカメラ映像を表示する -->
         <canvas id="camera-canvas" class="absolute top-0 left-0 z-50"></canvas>
         <!-- QRコードの周りに赤枠を表示するための -->
-        <canvas id="rect-canvas" class="absolute top-0 left-0 z-100"></canvas>
+        <canvas id="rect-canvas" class="absolute top-0 left-0 z-50"></canvas>
     </div>
-
-    <!-- QRコードの内容を表示するメッセージ -->
-    <div id="qr-msg"></div>
-
+    <div
+        class="fixed bottom-3 left-1/2 transform -translate-x-1/2 bg-black bg-opacity-50 text-white py-2 px-4 rounded text-center">
+        <span id="qr-msg">QRコード:見つかりません</span>
+    </div>
 
     <!-- HTMLにjsQR.jsを読み込みます。 -->
     <script src="../../js/jsQR.js"></script>
-     <!-- QRコードのスキャンと描画を行うJavaScriptファイル -->
+    <!-- QRコードのスキャンと描画を行うJavaScriptファイル -->
     <script src="../../js/qr_code.js"></script>
 </body>
+
 </html>
