task css path chang

--- a/frontend/src/html/user/tasks/task_info.html
+++ b/frontend/src/html/user/tasks/task_info.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>タスクの</title>
-        <link rel="stylesheet" href="/frontend/src/css/user/tasks/task_info.css">
+        <link rel="stylesheet" href="../../../css/user/tasks/task_info.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"/>
         <style>
             body {
