--- a/frontend/src/html/user/tasks/task_report.html
+++ b/frontend/src/html/user/tasks/task_report.html
@@ -2,8 +2,9 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>タスク報告画面</title>
-        <link rel="stylesheet" href="/frontend/src/css/user/tasks/task_report.css">
+        <title>タスク報告画面</title>\
+        <!-- TODO がちめにpathきもいっファイルの場所かえようか -->
+        <link rel="stylesheet" href="../../../css/user/tasks/task_report.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"/>
         <style>
             body {
